# valgroup

./: .gitignore  Makefile  README.md  pyproject.toml
config/: requirements.txt  values.yaml
src/: main.py
src/controllers/: job_controller.py
src/files/downloads/: employees_2025-12-07_12-03-46.xlsx
src/models/: employee.py
src/services/: excel_service.py  file_service.py  log_service.py  report_service.py  system_service.py
src/tests/: test_system_service.py
src/utils/: constants.py  enviroment.py  response.py  selenium.py  webdriver.py
src/views/: email_view.py  results_view.py
